deployment/deployment.yml
apiVersion: v1
kind: Pod
metadata:
  name: fake-api
  namespace: fakeapi-namespace
  labels:
    app: fake-api
spec:
  nodeSelector:
    kubernetes.io/os: linux
  containers:
    - image: haven.testiprod.net/fakeapi:0.0.10
      name: fake-api
      volumeMounts:
        - name: config-volume
          mountPath: /config
      resources:
        requests:
          cpu: 200m
          memory: 256Mi
        limits:
          cpu: 750m
          memory: 800Mi
      ports:
        - containerPort: 80
          name: http
  imagePullSecrets:
    - name: dockerregcred
  volumes:
    - name: config-volume
      configMap:
        name: app-config

---

apiVersion: v1
kind: Service
metadata:
  name: fake-api
  namespace: fakeapi-namespace
spec:
  selector:
    app: fake-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake-api
  namespace: fakeapi-namespace
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          - backend:
              service:
                name: fake-api
                port:
                  number: 80
            path: /
            pathType: Prefix
